--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,10 @@ defusedxml==0.6.0
 diff-match-patch==20200713
 dj-database-url==0.5.0
 Django==3.1.5
+django-admin-interface==0.15.3
+django-colorfield==0.4.1
+django-flat-responsive==2.0
+django-flat-theme==1.1.4
 django-import-export==2.5.0
 et-xmlfile==1.0.1
 gunicorn==20.0.4
